<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
   android:background="@color/black"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="70dp"
        android:orientation="vertical"
        android:paddingTop="25dp"
        android:paddingBottom="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/txt_register_header"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/txt_username"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/sf_display_semibold"
            android:hint="@string/txt_username_hint"
            android:importantForAutofill="no"
            android:singleLine="true"
            android:textColor="#E0E0E0"
            android:textColorHint="#808080"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/txt_email"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/sf_display_semibold"
            android:hint="@string/txt_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="#E0E0E0"
            android:textColorHint="#808080"
            android:textSize="16sp"
            android:importantForAutofill="no" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/txt_password"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/sf_display_semibold"
            android:importantForAutofill="no"
            android:hint="@string/txt_password_hint"
            android:inputType="textPassword"
            android:textColor="#E0E0E0"
            android:textColorHint="#808080"
            android:textSize="16sp"
            android:autofillHints="" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#FFFFFF" />

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text=""
            android:textColor="#808080"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/txt_sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:backgroundTint="#212121"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:clickable="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sf_display_semibold"
            android:text="@string/txt_already_have_account"
            android:textSize="14sp"
            android:focusable="true" />


        <com.airbnb.lottie.LottieAnimationView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/loading_bar"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            app:lottie_colorFilter="@color/white"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/load" />


    </LinearLayout>


</ScrollView>